[package]
name = "pasta_p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
laminar = "0.5"
ratatui = "0.26"
crossterm = "0.27"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = "0.4"
get_if_addrs = "0.5"
arboard = "3.4"
stunclient = "0.4.2"
base64 = "0.22"
