[package]
name = "pasta_p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "sync"] }
futures-util = "0.3"
ratatui = "0.26"
crossterm = "0.27"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = "0.4"
get_if_addrs = "0.5"
arboard = "3.4"
stunclient = "0.4.2"
base64 = "0.22"
rcgen = "0.12"
